tests/src/frontend/typechecking/invalid/optional_args2.sk
fun test(x: Int, b: Bool = true, y: Int): Int {
  if (b) y else x
}

fun main(): void {
  print_raw("Fail")
}
